--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         <div class="profile__passport">
           <img src="./images/Avatar.png" alt="Аватарка" class="profile__avatar">
           <div class="profile__profile-info">
-            <h2 class="profile__name">Жак-Ив Кусто</h2>
+            <div class="profile__name-button">
+              <h2 class="profile__name">Жак-Ив Кусто</h2>
+              <button class="profile__edit-button"></button>
+            </div>
             <p class="profile__description">Исследователь океана</p>
           </div>
-          <button class="profile__edit-button"></button>
         </div>
         <button class="profile__add-button"></button>
       </div>
