--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
           <div class="profile__profile-info">
             <div class="profile__name-button">
               <h2 class="profile__name">Жак-Ив Кусто</h2>
-              <button class="profile__edit-button"></button>
+              <img src="./images/Edit Button.svg" alt="Кнопка Изменить" class="profile__edit-button">
             </div>
             <p class="profile__description">Исследователь океана</p>
           </div>
         </div>
-        <button class="profile__add-button"></button>
+        <img src="./images/Add Button.svg" alt="Кнопка добавить" class="profile__add-button">
       </div>
       <section class="elements elements_grid">
         <ul class="elements__grid">
@@ -33,42 +33,42 @@
             <img src="./images/Karachyevsk.jpg" alt="Карачаевск" class="element__image">
             <div class="element__info">
               <h3 class="element__title">Карачаевск</h3>
-              <button class="element__button"></button>
+              <img src="./images/Group.svg" alt="Кнопка" class="element__button">
             </div>
           </li>
           <li class="element">
-            <img src="./images/elbrus.png" alt="Гора Эльбрус" class="element__image">
+            <img src="./images/BAO.jpg" alt="БАО" class="element__image">
             <div class="element__info">
-              <h3 class="element__title">Гора Эльбрус</h3>
-              <button class="element__button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img src="./images/Dombai.jpg" alt="Домбай" class="element__image">
-            <div class="element__info">
-              <h3 class="element__title">Домбай</h3>
-              <button class="element__button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img src="./images/elbrus.png" alt="Гора Эльбрус" class="element__image">
-            <div class="element__info">
-              <h3 class="element__title">Гора Эльбрус</h3>
-              <button class="element__button"><img src="./images/Group.svg" alt="Кнопка" class="element__button-image"></button>
+              <h3 class="element__title">БАО</h3>
+              <img src="./images/Group.svg" alt="Кнопка" class="element__button">
             </div>
           </li>
           <li class="element">
             <img src="./images/Dombai.jpg" alt="Домбай" class="element__image">
             <div class="element__info">
               <h3 class="element__title">Домбай</h3>
-              <button class="element__button"></button>
+              <img src="./images/Group.svg" alt="Кнопка" class="element__button">
             </div>
           </li>
           <li class="element">
-            <img src="./images/Karachyevsk.jpg" alt="Карачаево-Ч..." class="element__image">
+            <img src="./images/Dragon.jpg" alt="Зуб Дракона" class="element__image">
             <div class="element__info">
-              <h3 class="element__title">Карачаево-Ч...</h3>
-              <button class="element__button"></button>
+              <h3 class="element__title">Зуб Дракона</h3>
+              <img src="./images/Group.svg" alt="Кнопка" class="element__button">
+            </div>
+          </li>
+          <li class="element">
+            <img src="./images/Hills.jpg" alt="Холмы" class="element__image">
+            <div class="element__info">
+              <h3 class="element__title">Холмы</h3>
+              <img src="./images/Group.svg" alt="Кнопка" class="element__button">
+            </div>
+          </li>
+          <li class="element">
+            <img src="./images/River.jpg" alt="Река" class="element__image">
+            <div class="element__info">
+              <h3 class="element__title">Река</h3>
+              <img src="./images/Group.svg" alt="Кнопка" class="element__button">
             </div>
           </li>
         </ul>
@@ -77,6 +77,20 @@
     <footer class="footer page__footer">
       <p class="footer__text">© 2020 Mesto Russia</p>
     </footer>
+    <section class="popup">
+      <div class="popup__card">
+        <img src="./images/Close Icon.svg" alt="Кнопка закрыть" class="popup__close-button">
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <div class="popup__field">
+          <input type="text" name="fname" class="popup__text" value="Жак-Ив Кусто">
+        </div>
+        <div class="popup__field">
+          <input type="text" name="fdescription" class="popup__text" value="Исследователь океана">
+        </div>
+        <div class="popup__submit-button">Сохранить</div>
+      </div>
+    </section>
   </div>
   </body>
+  <script src="./scripts/index.js" defer></script>
 </html>
