--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body class="page">
   <div class="page__container">
     <header class="header page__header">
-      <img src="./images/Vector.svg" alt="логотип" class="header__logo">
+      <img src="./images/logo.svg" alt="логотип" class="header__logo">
       <img src="./images/Line.svg" alt="линия" class="header__line">
     </header>
     <main class="content page__content">
@@ -25,7 +25,9 @@
             <p class="profile__description">Исследователь океана</p>
           </div>
         </div>
-        <img src="./images/Add Button.svg" alt="Кнопка добавить" class="profile__add-button">
+        <div class="profile__add-button">
+          <img src="./images/Vector.svg" alt="Кнопка добавить" class="profile__cross">
+        </div>
       </div>
       <section class="elements elements_grid">
         <ul class="elements__grid">
