Попытка 1, переименование ссылок

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body class="page">
   <div class="page__container">
     <header class="header page__header">
-      <img src="./images/logo.svg" alt="логотип" class="header__logo">
+      <img src="./images/Logo.svg" alt="логотип" class="header__logo">
       <img src="./images/Line.svg" alt="линия" class="header__line">
     </header>
     <main class="content page__content">
@@ -26,7 +26,7 @@
           </div>
         </div>
         <div class="profile__add-button">
-          <img src="./images/Vector.svg" alt="Кнопка добавить" class="profile__cross">
+          <img src="./images/Cross.svg" alt="Кнопка добавить" class="profile__cross">
         </div>
       </div>
       <section class="elements elements_grid">
