--- a/index.html
+++ b/index.html
@@ -11,66 +11,67 @@
   <div class="page__container">
     <header class="header page__header">
       <img src="./images/Logo.svg" alt="логотип" class="header__logo">
-      <img src="./images/Line.svg" alt="линия" class="header__line">
     </header>
     <main class="content page__content">
-      <div class="profile">
+      <section class="profile">
         <div class="profile__passport">
           <img src="./images/Avatar.png" alt="Аватарка" class="profile__avatar">
           <div class="profile__profile-info">
             <div class="profile__name-button">
-              <h2 class="profile__name">Жак-Ив Кусто</h2>
-              <img src="./images/Edit Button.svg" alt="Кнопка Изменить" class="profile__edit-button">
+              <h1 class="profile__name">Жак-Ив Кусто</h1>
+              <button class="profile__edit-button">
+                <img src="./images/Edit_Button.svg" alt="Кнопка изменить" class="profile__pen">
+              </button>
             </div>
             <p class="profile__description">Исследователь океана</p>
           </div>
         </div>
-        <div class="profile__add-button">
+        <button class="profile__add-button">
           <img src="./images/Cross.svg" alt="Кнопка добавить" class="profile__cross">
-        </div>
-      </div>
-      <section class="elements elements_grid">
+        </button>
+      </section>
+      <section class="elements">
         <ul class="elements__grid">
           <li class="element">
             <img src="./images/Karachyevsk.jpg" alt="Карачаевск" class="element__image">
             <div class="element__info">
               <h3 class="element__title">Карачаевск</h3>
-              <img src="./images/Group.svg" alt="Кнопка" class="element__button">
+              <button class="element__button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/BAO.jpg" alt="БАО" class="element__image">
             <div class="element__info">
               <h3 class="element__title">БАО</h3>
-              <img src="./images/Group.svg" alt="Кнопка" class="element__button">
+              <button class="element__button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/Dombai.jpg" alt="Домбай" class="element__image">
             <div class="element__info">
               <h3 class="element__title">Домбай</h3>
-              <img src="./images/Group.svg" alt="Кнопка" class="element__button">
+              <button class="element__button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/Dragon.jpg" alt="Зуб Дракона" class="element__image">
             <div class="element__info">
               <h3 class="element__title">Зуб Дракона</h3>
-              <img src="./images/Group.svg" alt="Кнопка" class="element__button">
+              <button class="element__button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/Hills.jpg" alt="Холмы" class="element__image">
             <div class="element__info">
               <h3 class="element__title">Холмы</h3>
-              <img src="./images/Group.svg" alt="Кнопка" class="element__button">
+              <button class="element__button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/River.jpg" alt="Река" class="element__image">
             <div class="element__info">
               <h3 class="element__title">Река</h3>
-              <img src="./images/Group.svg" alt="Кнопка" class="element__button">
+              <button class="element__button"></button>
             </div>
           </li>
         </ul>
@@ -80,19 +81,15 @@
       <p class="footer__text">© 2020 Mesto Russia</p>
     </footer>
     <section class="popup">
-      <div class="popup__card">
-        <img src="./images/Close Icon.svg" alt="Кнопка закрыть" class="popup__close-button">
+      <form class="popup__card">
+        <button class="popup__close-button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
-        <div class="popup__field">
-          <input type="text" name="fname" class="popup__text" value="Жак-Ив Кусто">
-        </div>
-        <div class="popup__field">
-          <input type="text" name="fdescription" class="popup__text" value="Исследователь океана">
-        </div>
-        <div class="popup__submit-button">Сохранить</div>
-      </div>
+        <input type="text" name="fname" class="popup__text">
+        <input type="text" name="fdescription" class="popup__text">
+        <button type="submit" class="popup__submit-button">Сохранить</button>
+      </form>
     </section>
   </div>
-  </body>
   <script src="./scripts/index.js" defer></script>
+  </body>
 </html>
