--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
           <div class="profile__profile-info">
             <div class="profile__name-button">
               <h1 class="profile__name">Жак-Ив Кусто</h1>
-              <button class="profile__edit-button">
+              <button type="button" class="profile__edit-button">
                 <img src="./images/Edit_Button.svg" alt="Кнопка изменить" class="profile__pen">
               </button>
             </div>
             <p class="profile__description">Исследователь океана</p>
           </div>
         </div>
-        <button class="profile__add-button">
+        <button type="button" class="profile__add-button">
           <img src="./images/Cross.svg" alt="Кнопка добавить" class="profile__cross">
         </button>
       </section>
@@ -36,42 +36,42 @@
             <img src="./images/Karachyevsk.jpg" alt="Карачаевск" class="element__image">
             <div class="element__info">
               <h3 class="element__title">Карачаевск</h3>
-              <button class="element__button"></button>
+              <button type="button" class="element__button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/BAO.jpg" alt="БАО" class="element__image">
             <div class="element__info">
               <h3 class="element__title">БАО</h3>
-              <button class="element__button"></button>
+              <button type="button" class="element__button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/Dombai.jpg" alt="Домбай" class="element__image">
             <div class="element__info">
               <h3 class="element__title">Домбай</h3>
-              <button class="element__button"></button>
+              <button type="button" class="element__button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/Dragon.jpg" alt="Зуб Дракона" class="element__image">
             <div class="element__info">
               <h3 class="element__title">Зуб Дракона</h3>
-              <button class="element__button"></button>
+              <button type="button" class="element__button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/Hills.jpg" alt="Холмы" class="element__image">
             <div class="element__info">
               <h3 class="element__title">Холмы</h3>
-              <button class="element__button"></button>
+              <button type="button" class="element__button"></button>
             </div>
           </li>
           <li class="element">
             <img src="./images/River.jpg" alt="Река" class="element__image">
             <div class="element__info">
               <h3 class="element__title">Река</h3>
-              <button class="element__button"></button>
+              <button type="button" class="element__button"></button>
             </div>
           </li>
         </ul>
@@ -81,8 +81,8 @@
       <p class="footer__text">© 2020 Mesto Russia</p>
     </footer>
     <section class="popup">
-      <form class="popup__card">
-        <button class="popup__close-button"></button>
+      <form name="editInfo" class="popup__card">
+        <button type="button" class="popup__close-button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <input type="text" name="fname" class="popup__text">
         <input type="text" name="fdescription" class="popup__text">
