--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <p class="footer__text">© 2020 Mesto Russia</p>
     </footer>
     <section class="popup">
-      <form name="editInfo" class="popup__card">
+      <form name="edit-info" class="popup__card">
         <button type="button" class="popup__close-button"></button>
         <h2 class="popup__title">Редактировать профиль</h2>
         <input type="text" name="fname" class="popup__text">
