feat: change of getting cards from js list

--- a/index.html
+++ b/index.html
@@ -31,50 +31,7 @@
         </button>
       </section>
       <section class="elements">
-        <ul class="elements__grid">
-          <li class="element">
-            <img src="./images/Karachyevsk.jpg" alt="Карачаевск" class="element__image">
-            <div class="element__info">
-              <h3 class="element__title">Карачаевск</h3>
-              <button type="button" class="element__button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img src="./images/BAO.jpg" alt="БАО" class="element__image">
-            <div class="element__info">
-              <h3 class="element__title">БАО</h3>
-              <button type="button" class="element__button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img src="./images/Dombai.jpg" alt="Домбай" class="element__image">
-            <div class="element__info">
-              <h3 class="element__title">Домбай</h3>
-              <button type="button" class="element__button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img src="./images/Dragon.jpg" alt="Зуб Дракона" class="element__image">
-            <div class="element__info">
-              <h3 class="element__title">Зуб Дракона</h3>
-              <button type="button" class="element__button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img src="./images/Hills.jpg" alt="Холмы" class="element__image">
-            <div class="element__info">
-              <h3 class="element__title">Холмы</h3>
-              <button type="button" class="element__button"></button>
-            </div>
-          </li>
-          <li class="element">
-            <img src="./images/River.jpg" alt="Река" class="element__image">
-            <div class="element__info">
-              <h3 class="element__title">Река</h3>
-              <button type="button" class="element__button"></button>
-            </div>
-          </li>
-        </ul>
+        <ul class="elements__grid"></ul>
       </section>
     </main>
     <footer class="footer page__footer">
@@ -90,6 +47,15 @@
       </form>
     </section>
   </div>
+  <template class="template">
+    <li class="element">
+      <img class="element__image">
+      <div class="element__info">
+        <h3 class="element__title"></h3>
+        <button type="button" class="element__button"></button>
+      </div>
+    </li>
+  </template>
   <script src="./scripts/index.js" defer></script>
   </body>
 </html>
