--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <section class="popup">
       <form name="edit-info" class="popup__card">
         <button type="button" class="popup__close-button"></button>
-        <h2 class="popup__title">Редактировать профиль</h2>
-        <input type="text" name="fname" class="popup__text">
-        <input type="text" name="fdescription" class="popup__text">
+        <h2 class="popup__title"></h2>
+        <input type="text" name="first-line" class="popup__text">
+        <input type="text" name="second-line" class="popup__text">
         <button type="submit" class="popup__submit-button">Сохранить</button>
       </form>
     </section>
