--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2 class="popup__title"></h2>
         <input type="text" name="first-line" class="popup__text">
         <input type="text" name="second-line" class="popup__text">
-        <button type="submit" class="popup__submit-button">Сохранить</button>
+        <button type="submit" class="popup__submit-button"></button>
       </form>
     </section>
   </div>
