--- a/index.html
+++ b/index.html
@@ -46,9 +46,17 @@
         <button type="submit" class="popup__submit-button"></button>
       </form>
     </section>
+    <section class="image-popup">
+      <div class="image-popup__pic">
+        <button type="button" class="image-popup__close-button"></button>
+        <img class="image-popup__image">
+        <h2 class="image-popup__title"></h2>
+      </div>
+    </section>
   </div>
   <template class="template">
     <li class="element">
+      <button type="button" class="element__delete"></button>
       <img class="element__image">
       <div class="element__info">
         <h3 class="element__title"></h3>
