--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
       </div>
     </li>
   </template>
-  <script src="./scripts/index.js" defer></script>
-  <script src="./scripts/validate.js" defer></script>
+  <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
