refactor: make function renderCard

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <button type="button" class="popup__button"></button>
         <h2 class="popup__title">Новое место</h2>
         <section class="popup__section">
-          <input type="text" minlength="2" maxlength="30" name="title" id="title-input" required placeholder="Название" class="popup__input">
+          <input type="text" minlength="2" maxlength="30" name="name" id="title-input" required placeholder="Название" class="popup__input">
           <span class="popup__input-error" id="title-input-error"></span>
         </section>
         <section class="popup__section">
