--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,20 @@
     <main class="content page__content">
       <section class="profile">
         <div class="profile__passport">
-          <img src="<%=require('./images/Avatar.png')%>" alt="Аватарка" class="profile__avatar">
+          <div class="profile__photo-container">
+            <div class="profile__change-photo-overlay">
+              <img src="<%=require('./images/Pen.svg')%>" alt="Кнопка изменить" class="profile__change-photo">
+            </div>
+            <img alt="Аватарка" class="profile__avatar">
+          </div>
           <div class="profile__profile-info">
             <div class="profile__name-button">
-              <h1 class="profile__name">Жак-Ив Кусто</h1>
+              <h1 class="profile__name"></h1>
               <button type="button" class="profile__edit-button">
                 <img src="<%=require('./images/Edit_Button.svg')%>" alt="Кнопка изменить" class="profile__pen">
               </button>
             </div>
-            <p class="profile__description">Исследователь океана</p>
+            <p class="profile__description"></p>
           </div>
         </div>
         <button type="button" class="profile__add-button">
@@ -45,7 +50,7 @@
           <span class="popup__input-error" id="name-input-error"></span>
         </section>
         <section class="popup__section">
-          <input type="text" minlength="2" maxlength="200" name="description" id="description-input" required placeholder="О себе" class="popup__input">
+          <input type="text" minlength="2" maxlength="200" name="about" id="description-input" required placeholder="О себе" class="popup__input">
           <span class="popup__input-error" id="description-input-error"></span>
         </section>
         <button type="submit" class="popup__submit-button">Сохранить</button>
@@ -66,6 +71,24 @@
         <button type="submit" class="popup__submit-button">Создать</button>
       </form>
     </section>
+    <section class="popup popup_submit-form">
+      <form name="info" class="popup__form popup__form-submit-form" novalidate>
+        <button type="button" class="popup__button"></button>
+        <h2 class="popup__title popup__title_submit-form">Вы уверены?</h2>
+        <button type="submit" class="popup__submit-button popup__submit-button_submit-form">Да</button>
+      </form>
+    </section>
+    <section class="popup popup_change-photo">
+      <form name="info" class="popup__form popup__form_change-photo" novalidate>
+        <button type="button" class="popup__button"></button>
+        <h2 class="popup__title">Обновить аватар</h2>
+        <section class="popup__section">
+          <input type="url" name="link" id="link-input" required placeholder="Ссылка на картинку" class="popup__input">
+          <span class="popup__input-error" id="link-input-error"></span>
+        </section>
+        <button type="submit" class="popup__submit-button">Сохранить</button>
+      </form>
+    </section>
     <section class="popup-image">
       <div class="popup-image__pic">
         <button type="button" class="popup__button"></button>
@@ -80,7 +103,10 @@
       <img class="element__image">
       <div class="element__info">
         <h3 class="element__title"></h3>
-        <button type="button" class="element__button"></button>
+        <div class="element__like-section">
+          <button type="button" class="element__button"></button>
+          <span class="element__likes">5</span>
+        </div>
       </div>
     </li>
   </template>
